_archive/budibase/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: budibase
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: "budibase.${SECRET_DOMAIN}"
    hajimari.io/enable: "true"
    hajimari.io/icon: "cog"
spec:
  ingressClassName: internal
  rules:
    - host: "budibase.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: budibase
                port:
                  number: 80
  tls:
    - hosts:
        - "budibase.${SECRET_DOMAIN}"
